updated to Java 17